<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="hello">KONJ</string>
    <string name="app_name">Konj</string>
    <string name="timer">TIMER</string>
    <string name="admin">ADMIN</string>
    <string name="club">KLUB</string>
    <string name="participant">TRKAC</string>
    <string name="race">UTRKA</string>
    <string name="races">UTRKE</string>
    <string name="participants">TRKACI</string>
    <string name="clubs">KLUBOVI</string>
    <string name="race_timer">UTRKA TIMER</string>
    <string name="new1">novi</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="dels">del</string>
    <string name="name">naziv</string>
    <string name="nameHint">naziv</string>
    <string name="Name">Ime</string>
    <string name="NameHint">Ime</string>
    <string name="chrono">Kronometar</string>
    <string name="chronoHint">D/N</string>
    <string name="Surname">Prezime</string>
    <string name="SurnameHint">Prezime</string>
    <string name="id">id</string>
    <string name="save">spremi</string>
    <string name="results">results</string>
    <string name="result">result</string>
    <string name="timer_s">"timer"</string>
    <string name="start">"start"</string>
    <string name="idParticipant">"id Participant"</string>
    <string name="startRace">"Start utrke"</string>
    <string name="finish">"Ulaz u cilj!"</string>
    <string name="startHint">"yyyy-MM-dd HH:mm:ss"</string>
    <string name="chkNewStart">"Novi st. broj?"</string>
    <string name="CurrentRace">"utrka"</string>
    <string name="StartNumber">"Startni broj"</string>
    <string name="registration">"registrirani"</string>
    <string name="SexHint">"Spol 1-0 (1-M,0-Ž)"</string>
    <string name="Sex">"Spol"</string>
    <string name="Email">"Email"</string>
    <string name="EmailHint">"Email"</string>
    <string name="Year">"Godina r."</string>
    <string name="YearHint">"Godina rođenja"</string>
    <string name="Mob">"Mob."</string>
    <string name="MobHint">"Broj mobitela"</string>
    <string name="Shirt">"Majica"</string>
    <string name="ShirtHint">"S-M-L-XL"</string>
    <string name="chkProcess">"Obrada?"</string>
    <string name="Process">"Obrada"</string>
    <string name="Upload">"Upload"</string>
    <string name="UploadAll">"Upload sve!"</string>
    <string name="Download">"Download"</string>
    <string name="DownloadServer">"Download sa servera"</string>
    <string name="Preferences">"Postavke"</string>
    <string name="serverUrl">"URL servera"</string>
    <string name="autoUpload">"Autom. upload podataka"</string>
    <string name="resultHint">"HH:MM:SS"</string>
    <string name="startParticipant">"Chr. start"</string>
    <string name="newReg">"Za novi st.br. idi na trkači!"</string>
</resources>
