<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/queryScrollView" 
  android:layout_width="match_parent" 
  android:layout_height="wrap_content"
  android:layout_span="2" android:padding="5dp">
<TableLayout 
    android:layout_width="match_parent"  android:stretchColumns="*"
    android:layout_height="wrap_content" android:padding="5dp" 
    android:id="@+id/tableLayout">

	<TableRow android:id="@+id/tableRow0" 
	  android:layout_marginTop="20dp"
      android:layout_height="wrap_content" 
      android:layout_width="match_parent">
        <TextView
	        android:id="@+id/clubsTextView"
	        android:layout_width="@dimen/tagButtonWidth"
	        android:layout_height="40dp"
	        android:gravity="center"
	        android:text="@string/clubs"/>
    	<Button
	        android:id="@+id/uploadClubsButton"
	        android:layout_width="@dimen/editButtonWidth"
	        android:layout_height="fill_parent"
	        android:gravity="center_vertical|center_horizontal"
	        android:text="@string/Upload" />
   	</TableRow>
   	
	<TableRow android:id="@+id/tableRow1" 
	  android:layout_marginTop="20dp" 
      android:layout_height="wrap_content" 
      android:layout_width="match_parent">
        <TextView
	        android:id="@+id/participantsTextView"
	        android:layout_width="@dimen/tagButtonWidth"
	        android:layout_height="40dp"
	        android:gravity="center"
	        android:text="@string/participants"/>
    	<Button
	        android:id="@+id/uploadParticipantsButton"
	        android:layout_width="@dimen/editButtonWidth"
	        android:layout_height="fill_parent"
	        android:gravity="center_vertical|center_horizontal"
	        android:text="@string/Upload" />
   	</TableRow>
   	
	<TableRow android:id="@+id/tableRow2" 
	  android:layout_marginTop="20dp"
      android:layout_height="wrap_content" 
      android:layout_width="match_parent">
        <TextView
	        android:id="@+id/resultsTextView"
	        android:layout_width="@dimen/tagButtonWidth"
	        android:layout_height="40dp"
	        android:gravity="center"
	        android:text="@string/results"/>
    	<Button
	        android:id="@+id/uploadResultsButton"
	        android:layout_width="@dimen/editButtonWidth"
	        android:layout_height="fill_parent"
	        android:gravity="center_vertical|center_horizontal"
	        android:text="@string/Upload" />
   	</TableRow>
   	
	<TableRow android:id="@+id/tableRow3" 
	  android:layout_marginTop="20dp"
	  android:layout_width="fill_parent"
      android:layout_height="wrap_content">
	    <TextView
	        android:id="@+id/currentRaceTextView"
	        android:layout_width="@dimen/tagButtonWidth"
	        android:layout_height="fill_parent"
	        android:gravity="center"
	        android:text="@string/CurrentRace" />
	    <CheckBox
        android:id="@+id/chkProcess"
        android:layout_width="@dimen/editButtonWidth"
        android:layout_height="wrap_content"
        android:text="@string/Process" />
	</TableRow>   	
	
	<TableRow android:id="@+id/tableRow4" 
	  android:layout_marginTop="20dp" android:layout_marginBottom="10dp"
      android:layout_height="wrap_content" 
      android:layout_width="match_parent">
    	<Button
	        android:id="@+id/uploadAllButton"
	        android:layout_width="@dimen/tagButtonWidth"
	        android:layout_height="fill_parent"
	        android:gravity="center_vertical|center_horizontal"
	        android:text="@string/UploadAll" />
   	</TableRow>
   		
	<TableRow android:id="@+id/tableRow5" 
	  android:layout_marginTop="20dp" android:layout_marginBottom="10dp"
      android:layout_height="wrap_content" 
      android:layout_width="match_parent">
    	<Button
	        android:id="@+id/downloadButton"
	        android:layout_width="@dimen/tagButtonWidth"
	        android:layout_height="fill_parent"
	        android:gravity="center_vertical|center_horizontal"
	        android:text="@string/DownloadServer" />
   	</TableRow>
   		
	<TableRow android:id="@+id/tableRow6" 
	  android:layout_marginTop="20dp" 
      android:layout_height="wrap_content" 
      android:layout_width="match_parent">
    	<Button
	        android:id="@+id/preferencesButton"
	        android:layout_width="@dimen/tagButtonWidth"
	        android:layout_height="fill_parent"
	        android:gravity="center_vertical|center_horizontal"
	        android:text="@string/Preferences" />
   	</TableRow>
	</TableLayout>
</ScrollView>
