<?xml version="1.0" encoding="UTF-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"  android:stretchColumns="*"
    android:layout_height="match_parent" android:padding="5dp" 
    android:id="@+id/tableLayout">

   	<TableRow android:id="@+id/tableRow0" 
	  android:layout_marginTop="20dp"
      android:layout_height="wrap_content" 
      android:layout_width="fill_parent">
	    <TextView
	        android:id="@+id/iDTextView"
	        android:layout_width="@dimen/nameWidth"
	        android:layout_height="fill_parent"
	        android:gravity="center"
	        android:text="@string/id" />
	    <TextView
	        android:id="@+id/iDEditView"
	        android:layout_width="@dimen/nameWidthEdit"
	        android:layout_height="fill_parent"
	        android:gravity="center_vertical|center_horizontal"/>
	</TableRow>
	
	<TableRow android:id="@+id/tableRow1" 
	  android:layout_width="fill_parent"
      android:layout_height="wrap_content">
	    <TextView
	        android:id="@+id/nameTextView"
	        android:layout_width="@dimen/nameWidth"
	        android:layout_height="fill_parent"
	        android:gravity="center"
	        android:text="@string/id" />
	    <EditText
	        android:id="@+id/nameEditText"
	        android:layout_width="@dimen/nameWidthEdit"
	        android:layout_height="fill_parent"
	        android:gravity="center_vertical|center_horizontal"
	        android:inputType="text"
	        android:hint="@string/idParticipant" />
	</TableRow>
		
	<TableRow android:id="@+id/tableRow2" 
	  android:layout_width="fill_parent"
      android:layout_height="wrap_content">
	    <TextView
	        android:id="@+id/resultStartTextView"
	        android:layout_width="@dimen/nameWidth"
	        android:layout_height="fill_parent"
	        android:gravity="center"
	        android:text="@string/start" />
	    <EditText
	        android:id="@+id/resultStartEditText"
	        android:layout_width="@dimen/nameWidthEdit"
	        android:layout_height="fill_parent"
	        android:gravity="center_vertical|center_horizontal"
	        android:inputType="text"
	        android:hint="@string/startHint" />
	</TableRow>
	
	<TableRow android:id="@+id/tableRow3" 
	  android:layout_width="fill_parent"
      android:layout_height="wrap_content">
	    <TextView
	        android:id="@+id/resultTextView"
	        android:layout_width="@dimen/nameWidth"
	        android:layout_height="fill_parent"
	        android:gravity="center"
	        android:text="@string/result" />
	    <EditText
	        android:id="@+id/resultEditText"
	        android:layout_width="@dimen/nameWidthEdit"
	        android:layout_height="fill_parent"
	        android:gravity="center_vertical|center_horizontal"
	        android:inputType="text"
	        android:hint="@string/resultHint" />
	</TableRow>

	<TableRow android:id="@+id/tableRow4" 
	  android:layout_width="fill_parent"
      android:layout_height="wrap_content">
	    <TextView
	        android:id="@+id/resultTimeTextView"
	        android:layout_width="@dimen/nameWidth"
	        android:layout_height="fill_parent"
	        android:gravity="center"
	        android:text="@string/result" />
	    <EditText
	        android:id="@+id/resultTimeEditText"
	        android:layout_width="@dimen/nameWidthEdit"
	        android:layout_height="fill_parent"
	        android:gravity="center_vertical|center_horizontal"
	        android:inputType="text"
	        android:hint="@string/startHint" />
	</TableRow>
	   
	<Button
        android:id="@+id/spremiButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/save" />
</TableLayout>
