<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"  android:stretchColumns="*"
    android:layout_height="match_parent" android:padding="5dp" 
    android:id="@+id/tableLayout">

	<TableRow android:id="@+id/tableRow0" 
	  android:layout_marginTop="20dp" android:layout_marginBottom="10dp"
      android:layout_height="wrap_content" 
      android:layout_width="match_parent">
      <EditText
         android:id="@+id/nameEditText"
         android:layout_width="@dimen/nameWidthEdit"
         android:layout_height="fill_parent"
         android:gravity="center_vertical|center_horizontal"
         android:inputType="text"
         android:hint="@string/startHint" />
      <Button android:id="@+id/timerButton" 
         android:layout_height="wrap_content" 
         android:layout_width="wrap_content" 
         android:layout_gravity="center_vertical" 
         android:text="@string/startRace"
         android:textColor="#000000"></Button>
   	</TableRow>
   	
	<TableRow android:id="@+id/tableRow1" 
	  android:layout_marginTop="30dp" 
      android:layout_height="wrap_content" 
      android:layout_width="match_parent">
      <EditText
         android:id="@+id/startParticipantEditText"
         android:layout_width="@dimen/nameWidthEdit"
         android:layout_height="fill_parent"
         android:gravity="center_vertical|center_horizontal"
         android:inputType="text"
         android:hint="@string/idParticipant" />
      <Button android:id="@+id/startParticipantButton" 
         android:layout_height="wrap_content" 
         android:layout_width="wrap_content" 
         android:layout_gravity="center_vertical" 
         android:text="@string/startParticipant"
         android:textColor="#000000"></Button>
   	</TableRow>
   	
	<TableRow android:id="@+id/tableRow2" 
	  android:layout_marginTop="40dp" android:layout_marginBottom="10dp"
      android:layout_height="wrap_content" 
      android:layout_width="match_parent">
      <EditText
         android:id="@+id/resultEditText"
         android:layout_width="@dimen/nameWidthEdit"
         android:layout_height="fill_parent"
         android:gravity="center_vertical|center_horizontal"
         android:inputType="text"
         android:hint="@string/idParticipant" />
      <Button android:id="@+id/resultButton" 
         android:layout_height="wrap_content" 
         android:layout_width="wrap_content" 
         android:layout_gravity="center_vertical" 
         android:text="@string/finish"
         android:textColor="#000000"></Button>
   	</TableRow>
   	   	      
 	<TableRow android:id="@+id/tableRow3" 
      android:layout_height="wrap_content" 
      android:layout_width="match_parent" android:layout_weight="1">
      
      <ScrollView android:id="@+id/queryScrollView" 
         android:layout_width="match_parent" 
         android:layout_span="2" android:padding="5dp">
			<TableLayout android:id="@+id/queryTableLayout" 
			   android:layout_width="match_parent" 
			   android:layout_height="match_parent" android:padding="5dp" 
			   android:stretchColumns="*"></TableLayout>
      </ScrollView>
   	</TableRow>
</TableLayout>
